Skip idle start of applications